tests/errors/E041.zen
struct bar {
    foo: int,
    baz: bool,
    foo: bool,
}